# Agentic-AI-Project

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: USAGE.md
src/: research_summarizer_agent.py
tests/: test_parse_json.py
